--- a/hume-helm/templates/media-configmap.yml
+++ b/hume-helm/templates/media-configmap.yml
@@ -47,4 +47,12 @@ data:
   {{- if .Values.media.metrics.enabled }}
   management.endpoints.web.exposure.include: "health,prometheus,info"
   {{- end }}
+  {{- if .Values.eventstore.enabled }}
+  hume.media.notifications.event-store.enabled: "{{ Values.eventstore.enabled }}"
+  hume.eventstore.hostname: "{{ .Values.eventstore.app.name }}"
+  hume.eventstore.port: "{{ .Values.eventstore.port }}"
+  hume.eventstore.username: "{{ .Values.eventstore.username }}"
+  hume.eventstore.password: "{{ .Values.eventstore.password }}"
+  {{- end }}
+
 ---
