disable service links in hume-media as it interfere with eventstore env

--- a/hume-helm/templates/media-deployment.yml
+++ b/hume-helm/templates/media-deployment.yml
@@ -34,6 +34,7 @@ spec:
       {{ end }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
+      enableServiceLinks: false
       volumes:
         {{- with .Values.media.volumes }}
         {{- toYaml . | nindent 8 }}
