--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,6 +14,7 @@ lint-chart:
     - apk add --no-cache python3 py3-pip
     - pip install pyyaml
   script:
+    - export HARBOR_USERNAME='robot$imagepull-secret-shared'
     # - helm template -f ./_tests/metrics-enabled.yml hume-helm > ./_tests/metrics-enabled-out.yml
     - python3 ./_tests/verify_labels.py
 
