--- a/hume-helm/values.yaml
+++ b/hume-helm/values.yaml
@@ -211,10 +211,20 @@ media:
       inititalDelaySeconds: 0
       periodSeconds: 10
       failureThreshold: 3
+      path: /actuator/metrics
+      port: metrics
     startupProbe:
       initialDelaySeconds: 30
       periodSeconds: 5
       failureThreshold: 60
+      path: /actuator/metrics
+      port: metrics
+    readinessProbe:
+      failureThreshold: 10
+      timeoutSeconds: 10
+      periodSeconds: 5
+      path: /actuator/metrics
+      port: metrics
   metrics:
     enabled: false
     service:
