--- a/hume-alerting/templates/deployment-controller.yml
+++ b/hume-alerting/templates/deployment-controller.yml
@@ -4,6 +4,7 @@ metadata:
   name: {{ include "hume-alerting.fullname" . }}-controller
   labels:
     {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-alerting-controller
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.controller.deployment.replicas | default 1 }}
@@ -11,6 +12,8 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hume-alerting.fullname" . }}-controller
+      {{- include "hume-alerting.labels" . | nindent 6 }}
+      app.kubernetes.io/component: hume-alerting-controller
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -19,8 +22,9 @@ spec:
         checksum/config: {{ include (print $.Template.BasePath "alerting-controller-configmap.yaml") . | sha256sum }}
       {{- end }}
       labels:
-        {{- include "hume-alerting.selectorLabels" . | nindent 8 }}
+        {{- include "hume-alerting.labels" . | nindent 8 }}
         app: {{ include "hume-alerting.fullname" . }}-controller
+        app.kubernetes.io/component: hume-alerting-controller
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
