--- a/hume-helm/templates/deployment.yaml
+++ b/hume-helm/templates/deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   name: {{ include "hume-helm.fullname" . }}-web
   labels:
+    app.kubernetes.io/component: hume-web
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -15,6 +16,8 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hume-helm.fullname" . }}-web
+      app.kubernetes.io/component: hume-web
+      {{- include "hume.labels" . | nindent 6 }}
   {{- with .Values.deploymentStrategy }}
   strategy:
   {{ toYaml . | trim | indent 4 }}
@@ -23,6 +26,8 @@ spec:
     metadata:
       labels:
         app: {{ include "hume-helm.fullname" . }}-web
+        app.kubernetes.io/component: hume-web
+        {{- include "hume.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
@@ -64,6 +69,7 @@ kind: Deployment
 metadata:
   name: {{ include "hume-helm.fullname" . }}-api
   labels:
+    app.kubernetes.io/component: hume-api
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -76,6 +82,8 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hume-helm.fullname" . }}-api
+      app.kubernetes.io/component: hume-api
+      {{- include "hume.labels" . | nindent 6 }}
   {{ with .Values.deploymentStrategy }}
   strategy:
   {{ toYaml . | trim | indent 4 }}
@@ -84,7 +92,23 @@ spec:
     metadata:
       labels:
         app: {{ include "hume-helm.fullname" . }}-api
+        app.kubernetes.io/component: hume-api
+        {{- include "hume.labels" . | nindent 8 }}
     spec:
+      {{- if ge (.Values.api.deployment.replicas | int) 2 }}
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: app
+                  operator: In
+                  values:
+                  - hume-api
+              topologyKey: "kubernetes.io/hostname"
+      {{- end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
