--- a/hume-helm/templates/maestro-deployment.yml
+++ b/hume-helm/templates/maestro-deployment.yml
@@ -4,6 +4,7 @@ kind: Deployment
 metadata:
   name: {{ include "hume-helm.fullname" . }}-maestro
   labels:
+    app.kubernetes.io/component: hume-maestro
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -16,6 +17,8 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hume-helm.fullname" . }}-maestro
+      app.kubernetes.io/component: hume-maestro
+      {{- include "hume.labels" . | nindent 6 }}
   {{- with .Values.deploymentStrategy }}
   strategy:
   {{ toYaml . | trim | indent 4 }}
@@ -24,6 +27,8 @@ spec:
     metadata:
       labels:
         app: {{ include "hume-helm.fullname" . }}-maestro
+        app.kubernetes.io/component: hume-maestro
+        {{- include "hume.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
