--- a/hume-helm/templates/media-statefulset.yml
+++ b/hume-helm/templates/media-statefulset.yml
@@ -4,6 +4,7 @@ kind: StatefulSet
 metadata:
   name: {{ include "hume-helm.fullname" . }}-media
   labels:
+    app.kubernetes.io/component: hume-media
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -16,10 +17,14 @@ spec:
   selector:
     matchLabels:
       app: {{ include "hume-helm.fullname" . }}-media
+      app.kubernetes.io/component: hume-media
+      {{- include "hume.labels" . | nindent 6 }}
   template:
     metadata:
       labels:
         app: {{ include "hume-helm.fullname" . }}-media
+        app.kubernetes.io/component: hume-media
+        {{- include "hume.labels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
