--- a/hume-alerting/templates/deployment-controller.yml
+++ b/hume-alerting/templates/deployment-controller.yml
@@ -11,9 +11,8 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app: {{ include "hume-alerting.fullname" . }}-controller
-      {{- include "hume-alerting.labels" . | nindent 6 }}
       app.kubernetes.io/component: hume-alerting-controller
+      {{- include "hume-alerting.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -23,7 +22,6 @@ spec:
       {{- end }}
       labels:
         {{- include "hume-alerting.labels" . | nindent 8 }}
-        app: {{ include "hume-alerting.fullname" . }}-controller
         app.kubernetes.io/component: hume-alerting-controller
     spec:
       {{- with .Values.imagePullSecrets }}
