--- a/hume-alerting/templates/deployment-operator.yaml
+++ b/hume-alerting/templates/deployment-operator.yaml
@@ -11,18 +11,16 @@ spec:
   {{- end }}
   selector:
     matchLabels:
-      app: {{ include "hume-alerting.fullname" . }}-operator
       app.kubernetes.io/component: hume-alerting-operator
-      {{- include "hume-alerting.labels" . | nindent 6 }}
+      {{- include "hume-alerting.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.operator.podAnnotations }}
+      {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
         {{- include "hume-alerting.labels" . | nindent 8 }}
-        app: {{ include "hume-alerting.fullname" . }}-operator
         app.kubernetes.io/component: hume-alerting-operator
     spec:
       {{- with .Values.imagePullSecrets }}
