--- a/hume-alerting/templates/deployment-operator.yaml
+++ b/hume-alerting/templates/deployment-operator.yaml
@@ -4,23 +4,39 @@ metadata:
   name: {{ include "hume-alerting.fullname" . }}-operator
   labels:
     {{- include "hume-alerting.labels" . | nindent 4 }}
+    app.kubernetes.io/component: hume-alerting-operator
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.operator.deployment.replicas | default 1 }}
   {{- end }}
   selector:
     matchLabels:
-      app: {{ include "hume-alerting.fullname" . }}-operator
+      app.kubernetes.io/component: hume-alerting-operator
+      {{- include "hume-alerting.selectorLabels" . | nindent 6 }}
   template:
     metadata:
-      {{- with .Values.operator.podAnnotations }}
+      {{- with .Values.podAnnotations }}
       annotations:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "hume-alerting.selectorLabels" . | nindent 8 }}
-        app: {{ include "hume-alerting.fullname" . }}-operator
+        {{- include "hume-alerting.labels" . | nindent 8 }}
+        app.kubernetes.io/component: hume-alerting-operator
     spec:
+      {{- if ge (.Values.operator.deployment.replicas | int) 2 }}
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: "app.kubernetes.io/component"
+                  operator: In
+                  values:
+                  - "hume-alerting-operator"
+              topologyKey: "kubernetes.io/hostname"
+      {{- end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
