--- a/hume-helm/templates/orchestra-statefulset.yml
+++ b/hume-helm/templates/orchestra-statefulset.yml
@@ -4,6 +4,7 @@ kind: StatefulSet
 metadata:
   name: {{ include "hume-helm.fullname" . }}-orchestra
   labels:
+    app.kubernetes.io/component: hume-orchestra
     {{- include "hume.labels" . | nindent 4 }}
   {{- with .Values.annotations }}
   annotations:
@@ -14,12 +15,28 @@ spec:
   replicas: {{ .Values.orchestra.deployment.replicas | int | default 1 }}
   selector:
     matchLabels:
-      app: {{ include "hume-helm.fullname" . }}-orchestra
+      {{- include "hume.selectorLabels" . | nindent 6 }}
+      app.kubernetes.io/component: hume-orchestra
   template:
     metadata:
       labels:
-        app: {{ include "hume-helm.fullname" . }}-orchestra
+        app.kubernetes.io/component: hume-orchestra
+        {{- include "hume.labels" . | nindent 8 }}
     spec:
+      {{- if ge (.Values.orchestra.deployment.replicas | int) 2 }}
+      affinity:
+        podAntiAffinity:
+          preferredDuringSchedulingIgnoredDuringExecution:
+          - weight: 100
+            podAffinityTerm:
+              labelSelector:
+                matchExpressions:
+                - key: "app.kubernetes.io/component"
+                  operator: In
+                  values:
+                  - "hume-orchestra"
+              topologyKey: "kubernetes.io/hostname"
+      {{- end }}
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
